[package]
name = "spelunker2"
version = "0.1.0"
authors = ["J. O. Makar <jomakar@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.17"
nix = "0.24.1"
regex = "1.5.5"
reqwest = { version = "0.11.0", features = ["blocking", "json"] }
serde = { version = "1.0.137", features = ["derive"] }
string-error = "0.1.0"
timeout-readwrite = "0.3.1"
